@@ -589,6 +589,8 @@ gboolean fini_plugin(struct plugin *p) {
 	return TRUE;
 }
 
+char *name_plugin = "admin";
+
 gboolean init_plugin(struct plugin *p) {
 	xmlNodePtr cur;
 	int i;
