@@ -86,6 +86,8 @@ gboolean fini_plugin(struct plugin *p) {
 	return TRUE;
 }
 
+char *name_plugin = "auto-away";
+
 gboolean init_plugin(struct plugin *p) {
 	char *t = NULL;
 	struct auto_away_data *d;
