@@ -29,6 +29,8 @@ static gboolean loop_save_config(gpointer user_data)
 	return TRUE;
 }
 
+char *name_plugin = "autosave";
+
 gboolean init_plugin(struct plugin *p)
 {
 	int time = 0;
