@@ -46,6 +46,8 @@ gboolean fini_plugin(struct plugin *p) {
 	return TRUE;
 }
 
+char *name_plugin = "noticelog";
+
 gboolean init_plugin(struct plugin *p) {
 	guint id = g_log_set_handler(NULL, G_LOG_LEVEL_MASK | G_LOG_FLAG_RECURSION, admin_log, NULL);
 	p->data = malloc(sizeof(guint));
